syntax = "proto3";
package protos;
import "base.proto";

// 登录
//cmd:1003
message C_USER_LOGIN {
   uint32 user_id = 1;//玩家id
}

// 登录返回
//cmd:10003
message S_USER_LOGIN {
   bool is_succ = 1;//是否成功;
   string err_mess = 2;//错误信息;
   uint32 sync_time = 3; //最近一次同步数据时间(32位整型unix时间戳)
   uint32 last_login_time = 4; // 当前登录的时间(服务器当前时间)
   uint32 last_logoff_time = 5; // 最后一次退出时间
   PlayerPt player_pt = 6;//玩家记录信息
   repeated ResourcesPt resp= 7; //玩家资源
   repeated CharacterPt cters = 8;//玩家角色
   repeated uint32 grade_frames = 9;//玩家grade相框
   repeated uint32 souls = 10;//玩家soul头像

}

//心跳包请求，返回同一个，请求需要带参数
//cmd:10002
message HEART_BEAT{
  uint64 sys_time = 1;//服务器当前时间
}

//同步数据请求
//cmd:1004
message C_SYNC_DATA{
  PlayerPt player_pt = 1;//玩家记录
	repeated ResourcesPt resp = 2; //玩家资源
}

//同步数据返回
//cmd:10004
message S_SYNC_DATA{
	bool is_succ = 1;//是否成功;
	string err_mess = 2;//错误信息;
  uint32 sync_time = 3;//同步数据时间(32位整型unix时间戳)
}

//修改昵称请求
//cmd:1005
message C_MODIFY_NICK_NAME{
  string nick_name = 1;//昵称
}

//修改昵称返回
//cmd:10005
message S_MODIFY_NICK_NAME{
  bool is_succ = 1;//是否成功;
  string err_mess = 2;//错误信息;
}

//请求排行榜
//cmd:1012
message C_SHOW_RANK{

}

//请求排行榜返回
//cmd:10081
message S_SHOW_RANK{
  RankInfoPt self_rank = 1;//自己的排行榜信息，如果在排行榜里面就有数据，不在就没有
  repeated RankInfoPt ranks = 2;//排行榜信息

}

//请求修改grade相框和soul头像
//cmd:1013
message C_MODIFY_GRADE_FRAME_AND_SOUL{
  uint32 soul = 1;//灵魂头像
  uint32 grade_frame = 2;//grade相框
}

//请求修改grade相框和soul头像返回
//cmd:1013
message S_MODIFY_GRADE_FRAME_AND_SOUL{
  bool is_succ = 1;//是否成功;
  string err_mess = 2;//错误信息;
}